--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   orcid            : "https://orcid.org/0000-0003-1595-0298"
   pinterest        :
   soundcloud       :
-  stackoverflow    : "https://stackoverflow.com/users/16425918/gary-cui"
+  stackoverflow    : "16425918/gary-cui"
   steam            :
   tumblr           :
   twitter          : #"replacethistwitterhandle"
